--- a/MolecularDynamics/Project.toml
+++ b/MolecularDynamics/Project.toml
@@ -1,4 +1,12 @@
 name = "MolecularDynamics"
 uuid = "d58702bc-6750-42b3-acb6-1e03cf20b69f"
 authors = ["Vini-BM <vinicius.bayne@ufrgs.br>"]
-version = "0.1.0"
+version = "0.1.3"
+
+[deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
